<resources>
    <string name="app_name">Traineeship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="austria">Austria</string>
    <string name="italy">Italy</string>
    <string name="poland">Poland</string>
    <string name="colombia">Colombia</string>
    <string name="madagascar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="switzerland">Switzerland</string>
    <string name="task2">Task№2</string>
    <string name="demo_link">https://i.picsum.photos/id/1015/6000/4000.jpg?hmac=aHjb0fRa1t14DTIEBcoC12c5rAXOSwnVlaA5ujxPQ0I</string>
    <string name="please_input_url">Please input URL</string>
    <string name="error_input">Please input URL</string>
    <string name="error">Error</string>
    <string name="show_pictures">Show pictures</string>
</resources>